<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <SwitchPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:defaultValue="false"
        android:key="notifications"
        android:title="@string/pref_title_new_notifications" />

    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
    <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:dependency="notifications"
        android:key="notifications_new_message_ringtone"
        android:ringtoneType="notification"
        android:title="@string/pref_title_ringtone" />

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:dependency="notifications"
        android:key="notifications_new_message_vibrate"
        android:title="@string/pref_title_vibrate" />

    <!-- NOTE: This allows users to input time for duration -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_notification_default_value"
        android:dependency="notifications"
        android:inputType="number"
        android:key="Insert Number"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/pref_description_duration_notification"
        android:title="@string/pref_title_duration_notification" />

</PreferenceScreen>
